2019-02-09  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1: Typo is fixed.

	* wayland/ui_display.c: cache_damage_h() and cache_damage_v() works
	  if rotate_display = right.

	* sdl2/ui_display.c: ui_window_update_all() is called
	  if SDL_WINDOWEVENT_SIZE_CHANGED is received.

2019-02-04  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c: 'vt_char_cols == 0' => vt_char_is_zerowidth().

	* vt_char.[ch]: vt_char_is_zerowidth() is added.

	* vt_line_bidi.c: set_visual_modified() checks visual order properly.

	* vt_bidi.c: 'bidi_mode = BIDI_ALWAYS_LEFT' instead of
	  'fri_type == FRIBIDI_TYPE_LTR' for DEC_SPECIAL characters.

2019-01-27  Araki Ken  <arakiken@users.sf.net>

	* cocoa.m: CGLayer is used if MacOSX is 10.14 or later.
	  (See http://twitter.com/Cj_bc_sd/status/1088111309223161857)

	* cocoatouch.m: CGContextSetBlendMode(kCGBlendModeCopy) is added.

	* lex.split.c: Logging to stdout is removed.

	* bl_dlfcn_dl.c: Compiling warning is fixed.

2019-01-24  Araki Ken  <arakiken@users.sf.net>

	* README.indic: Updated.

	* etc/*font*: ISCII_* except ISCII_TAMIL are activated.

	* libind/Makefile.in: tamil.o is not built.

2019-01-20  Araki Ken  <arakiken@users.sf.net>

	* ui_font_ft.c:
	  - A font name which contains "-" is not passed to FcNameParse().
	  - FT_ENCODING_APPLE_ROMAN is not set for ISCII in xft_font_open() and
	    cairo_font_open().
	  - "drawn_x +=" => "drawn_x =" in show_text().
	  - Unexpected increment of a counter is fixed in ui_window_draw_string32().

	* ui_window_cairo.c:
	  - show_iscii() is added to show ISCII characters.
	  - flush_glyphs() is called when font->size_attr == DOUBLE_WIDTH.

	* ui_window_xft.c:
	  ui_window_xft_draw_string8() shows iscii characters by
	  FC_Get_Char_Index() and XftDrawGlyphs().

2019-01-15  Araki Ken  <arakiken@users.sf.net>

	* vt_line_bidi.c: If vt_bidi() returns 0 or less value and base_was_trl
	  is true, vt_line_set_modified_all(line) is called.
